--- a/zern-culture/css/style.css
+++ b/zern-culture/css/style.css
@@ -1385,6 +1385,10 @@ body {
   position: relative;
   height: 100vh;
   min-height: 700px;
+  background-image: url("../img/home/home-bg.png");
+  background-position: center bottom;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .head__heading {
